--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,6 +6,10 @@
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
+    position: fixed;
+    top: 0;
+    width: 100%;
+
     
 }
 
